[package]
name = "famo"
version = "0.1.0"
authors = ["tbrand <taichiro0709@gmail.com>"]

[dependencies]
famo-lib = { version = "0.1.0", path = "famo-lib" }
clap = "*"
log = "*"
env_logger = "*"
failure = "*"
daemonize = "*"

[workspace]
members = [
  "famo-archive",
  "famo-hash",
  "famo-lang",
  "famo-s3",
  "famo-lib",
]
